--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>nithanim-mvn2</id>
+            <url>ftp://nithanim.me/repository</url>
+        </repository>
+    </distributionManagement>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.6</maven.compiler.source>
