--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,12 @@
     <artifactId>MensaApi</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
+    <licenses>
+        <license>
+            <name>GNU General Lesser Public License (LGPL) version 3.0</name>
+            <url>http://www.gnu.org/licenses/lgpl-3.0.html</url>
+        </license>
+    </licenses>
     <build>
         <extensions>
             <extension>
