--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
     <packaging>jar</packaging>
     <licenses>
         <license>
-            <name>GNU General Lesser Public License (LGPL) version 3.0</name>
-            <url>http://www.gnu.org/licenses/lgpl-3.0.html</url>
+            <name>Mozilla Public License Version 2.0</name>
+            <url>https://www.mozilla.org/MPL/2.0/</url>
         </license>
     </licenses>
     <build>
