--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.nithanim</groupId>
     <artifactId>MensaApi</artifactId>
-    <version>0.0.6</version>
+    <version>0.0.7-SNAPSHOT</version>
     <packaging>jar</packaging>
     <licenses>
         <license>
@@ -48,6 +48,14 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9</version>
+            <classifier>no-tzdb</classifier>
+        </dependency>
+    </dependencies>
     <distributionManagement>
         <repository>
             <id>nithanim-mvn2</id>
