--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
     <packaging>jar</packaging>
     <licenses>
         <license>
-            <name>Mozilla Public License Version 2.0</name>
-            <url>https://www.mozilla.org/MPL/2.0/</url>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
     <build>
@@ -59,7 +59,7 @@
     <distributionManagement>
         <repository>
             <id>nithanim-mvn2</id>
-            <url>ftp://nithanim.me/repository</url>
+            <url>${deploy-url}</url>
         </repository>
     </distributionManagement>
     <properties>
