--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.nithanim</groupId>
     <artifactId>MensaApi</artifactId>
-    <version>0.0.7-SNAPSHOT</version>
+    <version>0.0.8</version>
     <packaging>jar</packaging>
     <licenses>
         <license>
